# Khaos

./: .gitignore  .khos_state.json  GUIA_DO_USUARIO.md  README.md  SOUL.md  activate.py  khos.env.example  lessons-20260615.md  pyproject.toml  start.sh
plans/: 001-process-split-response.md  002-lazy-load-khos-env.md  003-pyproject-entry-point.md  004-fix-bare-except.md  005-remove-unused-imports.md  006-remove-unused-agent-param.md  007-style-perf-cleanup.md  README.md
templates/: prefill.json
tests/: test_smoke.py
