[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "khaos"
version = "1.0.0"
description = "KHAOS activation CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "honcho-ai",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
khaos = "activate:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["activate"]
